--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 2. Put it in the same folder as this HTML file
                                 3. Upload both to Tiny Host
                             -->
-                            <img src="Images/photo1.jpg" 
+                            <img src="photo1.jpg" 
                                  onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo1.jpg'" 
                                  alt="Our Memory 1" 
                                  class="w-full h-full object-cover">
@@ -258,7 +258,7 @@
                     <!-- Photo 2 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md -rotate-2 hover:rotate-0 transition duration-300">
                         <div class="aspect-square bg-gray-200 rounded-lg overflow-hidden">
-                            <img src="Images/photo2.jpg" 
+                            <img src="photo2.jpg" 
                                  onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo2.jpg'" 
                                  alt="Our Memory 2" 
                                  class="w-full h-full object-cover">
@@ -269,7 +269,7 @@
                     <!-- Photo 3 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md rotate-1 hover:rotate-0 transition duration-300">
                         <div class="aspect-square bg-gray-200 rounded-lg overflow-hidden">
-                            <img src="Images/photo3.jpg" 
+                            <img src="photo3.jpg" 
                                  onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo3.jpg'" 
                                  alt="Our Memory 3" 
                                  class="w-full h-full object-cover">
@@ -280,7 +280,7 @@
                     <!-- Photo 4 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md -rotate-1 hover:rotate-0 transition duration-300">
                         <div class="aspect-square bg-gray-200 rounded-lg overflow-hidden">
-                            <img src="Images/photo4.jpg" 
+                            <img src="photo4.jpg" 
                                  onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo4.jpg'" 
                                  alt="Our Memory 4" 
                                  class="w-full h-full object-cover">
@@ -291,7 +291,7 @@
                     <!-- Photo 5 -->
                      <div class="relative group bg-white p-2 rounded-xl shadow-md rotate-2 hover:rotate-0 transition duration-300">
                       <div class="aspect-square rounded-lg overflow-hidden relative">
-                        <img src="Images/photo5.jpg" 
+                        <img src="photo5.jpg" 
                              onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo5.jpg'" 
                              alt="Our Memory 5" 
                              class="w-full h-full object-cover">
@@ -302,7 +302,7 @@
                     <!-- Photo 6 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md -rotate-2 hover:rotate-0 transition duration-300">
                       <div class="aspect-square rounded-lg overflow-hidden relative">
-                        <img src="Images/photo6.jpg" 
+                        <img src="photo6.jpg" 
                              onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo6.jpg'" 
                              alt="Our Memory 6" 
                              class="w-full h-full object-cover">
@@ -312,7 +312,7 @@
                     <!-- Photo 7 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md -rotate-2 hover:rotate-0 transition duration-300">
                       <div class="aspect-square rounded-lg overflow-hidden relative">
-                        <img src="Images/photo7.jpg" 
+                        <img src="photo7.jpg" 
                              onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo6.jpg'" 
                              alt="Our Memory 7" 
                              class="w-full h-full object-cover">
@@ -322,7 +322,7 @@
                     <!-- Photo 8 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md -rotate-2 hover:rotate-0 transition duration-300">
                       <div class="aspect-square rounded-lg overflow-hidden relative">
-                        <img src="Images/photo8.jpg" 
+                        <img src="photo8.jpg" 
                              onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo6.jpg'" 
                              alt="Our Memory 8" 
                              class="w-full h-full object-cover">
@@ -332,7 +332,7 @@
                     <!-- Photo 9 -->
                     <div class="relative group bg-white p-2 rounded-xl shadow-md -rotate-2 hover:rotate-0 transition duration-300">
                       <div class="aspect-square rounded-lg overflow-hidden relative">
-                        <img src="Images/photo9.jpg" 
+                        <img src="photo9.jpg" 
                              onerror="this.onerror=null;this.src='https://placehold.co/600x600/fff0f3/f43f5e?text=Upload+photo6.jpg'" 
                              alt="Our Memory 9" 
                              class="w-full h-full object-cover">
@@ -579,4 +579,5 @@
 
     </script>
 </body>
+
 </html>
